{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 289,
  "lineage": "34521ce3-e211-f6e8-9042-c96a11dcd4ca",
  "resources": [
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650251718669:security-group/sg-0dfc7979dae65d2ec",
            "description": "Security group for Elastic Beanstalk to allow HTTP and backend traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dfc7979dae65d2ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "rac-app-env-sg",
            "name_prefix": "",
            "owner_id": "650251718669",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rac-app-env-sg"
            },
            "tags_all": {
              "Name": "rac-app-env-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0352428dc39f5a4de"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650251718669:security-group-rule/sgr-0184817724100c915",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-0184817724100c915",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dfc7979dae65d2ec",
            "security_group_rule_id": "sgr-0184817724100c915",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_beanstalk.aws_security_group.eb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inbound_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650251718669:security-group-rule/sgr-0c1eacd6aafcb9f10",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 4001,
            "id": "sgr-0c1eacd6aafcb9f10",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dfc7979dae65d2ec",
            "security_group_rule_id": "sgr-0c1eacd6aafcb9f10",
            "tags": null,
            "tags_all": {},
            "to_port": 4001
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_beanstalk.aws_security_group.eb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_beanstalk",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "inbound_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:650251718669:security-group-rule/sgr-015ef4724eed028f0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-015ef4724eed028f0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0dfc7979dae65d2ec",
            "security_group_rule_id": "sgr-015ef4724eed028f0",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elastic_beanstalk.aws_security_group.eb_sg"
          ]
        }
      ]
    }
  ]
}